added pwa support

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="icons/icon-96x96.png" />
+    <link rel="icon" href="favicon-16x.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="tomato" />
     <meta
       name="description"
       content="For the bois."
