added pwa support

--- a/public/index.html
+++ b/public/index.html
@@ -41,5 +41,16 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>
+      if('serviceWorker' in navigator){
+        window.addEventListener('load', ()=>{
+          navigator.serviceWorker.register('./serviceWorker.js').then((reg)=>{
+            console.log("Worker registered");
+          }).catch((err)=>{
+            console.log("Error in service worker", err );
+          })
+        })
+      }
+    </script>
   </body>
 </html>
