--- a/public/index.html
+++ b/public/index.html
@@ -42,12 +42,12 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script>
-      if('serviceWorker' in navigator){
-        window.addEventListener('load', ()=>{
-          navigator.serviceWorker.register('./serviceWorker.js').then((reg)=>{
-            console.log("Worker registered");
-          }).catch((err)=>{
-            console.log("Error in service worker", err );
+      if('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('./serviceWorker.js').then((reg) => {
+            console.log('Worker Registered')
+          }).catch((err) => {
+            console.log('Error in service worker registration.')
           })
         })
       }
