--- a/public/index.html
+++ b/public/index.html
@@ -41,13 +41,14 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script defer src="/_vercel/insights/script.js"></script>
     <script>
       if('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
           navigator.serviceWorker.register('./serviceWorker.js').then((reg) => {
             console.log('Worker Registered')
           }).catch((err) => {
-            console.log('Error in service worker registration.')
+            // console.log('Error in service worker registration.')
           })
         })
       }
