--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
       if('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
           navigator.serviceWorker.register('./serviceWorker.js').then((reg) => {
-            console.log('Worker Registered')
+            // console.log('Worker Registered')
           }).catch((err) => {
             // console.log('Error in service worker registration.')
           })
